# xiaomi-music-agent

./: .env.example  .gitignore  LICENSE  NOTICE  README.md
agents/netease-music-mcp/: README.md  cdp.js  music.js  package.json  play_playlist.js  server.js
config/: playlist_aliases.example.json  xiaomusic-setting.example.json
docs/: ARCHITECTURE.md  LEGAL.md  SECURITY.md  SEMANTIC_PLAYLIST_MAPPING_HANDOFF.md  SETUP.md  TER_PLAYER_BACKEND.md  TROUBLESHOOTING.md  xiaohongshu-post.md
patches/: xiaomusic-command-handler-arg.patch
players/ter-agent-player/: Cargo.toml
players/ter-agent-player/src/: main.rs
plugins/: smartask.py  smartnext.py  smartpause.py  smartplay.py  smartprev.py
scripts/: benchmark_playlist_mapping.py  build_playlist_aliases.py  connect_bluetooth_audio.m  debug_playlist_mapping.py  deploy.sh  env.sh  finalize_after_login.py  install.sh  intent_filter.py  local_playlist_mapper.py  music_agent.py  regression_music_intents.py  run_music_agent_service.sh  run_netease_cdp_service.sh  run_xiaomusic_service.sh  security_check.sh  semantic_playlist_mapper.py  set_audio_output.c  start.sh  start_xiaomusic.sh  status.sh  status_xiaomusic.sh  stop.sh  stop_xiaomusic.sh  summarize_benchmark_scores.py  sync_netease_client_playlists.js
